Arrow Issue on Mobile View

--- a/public/style/mediaqueries.css
+++ b/public/style/mediaqueries.css
@@ -106,4 +106,7 @@
   .logo-pic{
     transform: scale(2);
   }
+  .arrow {
+    display: hidden;
+  }
 }
